Fix layer index generation algorithm

Now the index is assigned to a layer dynamically. We just iterate over
all the existing layers, find ones with index in the end of the name,
choose the maximum one and create a new layer with index (maxIndex + 1).

BUG:420033